# fraud-scope

./: .env.example  .gitignore  01.1_xgboost.ipynb  01_exploration.ipynb  02_modelling.ipynb  03_mlops.ipynb  eda_utils.py  feature_utils.py  gnn_utils.py  graph_utils.py  model_utils.py  pyproject.toml
evidently_reports/: classification_report.html
