[project]
name = "fraud-scope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagshub>=0.7.0",
    "imbalanced-learn>=0.14.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "mlflow>=1.27.0",
    "pandas>=3.0.3",
    "protobuf<5.0.0",
    "seaborn>=0.13.2",
    "setuptools<82.0.0",
    "xgboost>=3.3.0",
]
