[project]
name = "fraud-scope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagshub>=0.7.0",
    "dotenv>=0.9.9",
    "dvc[s3]>=3.67.1",
    "imbalanced-learn>=0.14.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "mlflow>2.20.0",
    "pandas<3",
    "plotly>=6.8.0",
    "protobuf<5.0.0",
    "psutils>=3.3.15",
    "pynvml>=13.0.1",
    "seaborn>=0.13.2",
    "setuptools<82.0.0",
    "scikit-learn>=1.9.0",
    "torch>=2.12.1",
    "torch-geometric>=2.8.0",
    "xgboost>=3.3.0",
    "python-dotenv>=1.2.2",
    "shap>=0.52.0",
    "evidently>=0.4.36",
    "numpy>=2.1",
]
